k8s/twitch-prod/srs-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: srs-rtmp-lb
  namespace: twitch-prod
spec:
  type: LoadBalancer
  selector:
    app: srs
  ports:
    - name: rtmp
      port: 1935
      targetPort: 1935
      protocol: TCP
